--- a/package.json
+++ b/package.json
@@ -46,7 +46,14 @@
       "output": "release"
     },
     "mac": {
-      "target": "dmg",
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "universal"
+          ]
+        }
+      ],
       "category": "public.app-category.music"
     },
     "win": {
