--- a/package.json
+++ b/package.json
@@ -46,10 +46,14 @@
       "output": "release"
     },
     "mac": {
-      "target": "dmg",
-      "arch": [
-        "x64",
-        "arm64"
+      "target": [
+        {
+          "target": "dmg",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
       ],
       "category": "public.app-category.music",
       "identity": null
