--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "electron-is-dev": "^3.0.0",
     "fast-xml-parser": "^4.3.0",
     "lucide-react": "^0.344.0",
-    "p-limit": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.0"
@@ -40,7 +39,8 @@
     "files": [
       "dist/**/*",
       "electron/**/*",
-      "package.json"
+      "package.json",
+      ".env"
     ],
     "directories": {
       "output": "release"
@@ -59,7 +59,14 @@
       "identity": null
     },
     "win": {
-      "target": "nsis"
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
     },
     "nsis": {
       "oneClick": false,
