--- a/package.json
+++ b/package.json
@@ -1,77 +1,61 @@
 {
   "name": "cratebatch",
-  "productName": "CrateBatch",
-  "main": "electron/main.js",
-  "version": "1.0.0",
-  "description": "Rekordbox Library Analyzer Desktop App",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "electron-dev": "concurrently -k \"vite\" \"wait-on http://localhost:5173 && cross-env ELECTRON_START_URL=http://localhost:5173 electron .\"",
-    "dist": "npm run build && electron-builder"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "electron": "electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "dist": "npm run build && electron-builder",
+    "postinstall": "cd functions && npm install"
   },
   "dependencies": {
-    "@tanstack/react-virtual": "^3.0.0",
-    "axios": "^1.6.0",
-    "electron-is-dev": "^3.0.0",
-    "fast-xml-parser": "^4.3.0",
-    "lucide-react": "^0.344.0",
+    "@tanstack/react-virtual": "^3.5.0",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.1",
+    "fast-xml-parser": "^4.3.6",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "concurrently": "^8.2.0",
-    "cross-env": "^7.0.3",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.1.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "electron": "^30.0.1",
+    "electron-builder": "^24.13.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
     "wait-on": "^7.2.0"
   },
   "build": {
     "appId": "com.cratebatch.app",
     "productName": "CrateBatch",
+    "directories": {
+      "output": "dist-electron"
+    },
     "files": [
       "dist/**/*",
-      "electron/**/*",
-      "package.json",
-      ".env"
+      "electron/**/*"
     ],
-    "directories": {
-      "output": "release"
-    },
     "mac": {
-      "target": [
-        {
-          "target": "dmg",
-          "arch": [
-            "x64",
-            "arm64"
-          ]
-        }
-      ],
-      "category": "public.app-category.music",
-      "identity": null
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ]
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true
+      "category": "public.app-category.music"
     }
   }
 }
